spade-macros/tests/into_subdiagnostic/ui/not_named_fields.stderr
error: Can only derive IntoSubdiagnostic on structs with named fields
 --> tests/into_subdiagnostic/ui/not_named_fields.rs:3:10
  |
3 | #[derive(spade_macros::IntoSubdiagnostic)]
  |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `spade_macros::IntoSubdiagnostic` (in Nightly builds, run with -Z macro-backtrace for more info)
